# FALL

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  fall.adaptive_learning.html  fall.classifiers.html  fall.concept_representations.html  fall.data.html  fall.html  fall.repository.html  fall.states.html  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yaml  docs.yaml
_sources/: fall.adaptive_learning.rst.txt  fall.classifiers.rst.txt  fall.data.rst.txt  fall.repository.rst.txt  fall.states.rst.txt  index.rst.txt
docs/: conf.py  fall.concept_representations.rst  fall.rst  index.rst  modules.rst
examples/: baseline_monitoring.py  buffering_observations.ipynb  data_generation.ipynb  detecting_concept_drift.ipynb  evaluation_example.ipynb  evaluation_example_fingerprint.ipynb  standard_adaptive_learning.ipynb  test_run.py  wind_sim_monitoring.py
fall/: __init__.py
fall/adaptive_learning/: __init__.py  base.py  buffer.py  classifier_adaptation.py  discrete_segment.py  test_base_adaptive_learner.py  test_base_buffer_adaptive_learner.py  test_buffer.py  test_classifier_adaptation.py  test_discrete_segment_AL.py  test_reidentification_schedulers.py
fall/classifiers/: __init__.py  river_evolution_classifiers.py
fall/concept_representations/: __init__.py  base.py  error_rate_representation.py  fingerprint_representation.py  meta_feature_distributions.py  normalizer.py  rolling_stats.py  test_distributions.py  test_representations.py
fall/data/: __init__.py  datastream.py  test_datastream.py  (+1 more)
streamselect/: __init__.py  package_tester.py  utils.py
tests/: test_package_tester.py
(+86 files in other folders)
