[metadata]
name = fall-ml
version = 0.0.1
author = "Ben Halstead"
author_email = "benhalstd@gmail.com"
description = "Real-time lifelong machine learning"
long_description = file: README.md
long_description_content_type = "text/markdown"
licence = "BSD 3-Clause License"

[options]
install_requires =
    river

[flake8]
max-line-length = 119
exclude =.git,__pycache__,docs/,build,dist,tests

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_redundant_casts = True
no_implicit_optional = True
strict_optional = True
exclude = docs

[mypy-tests.*]
ignore_errors = True

[options.extras_require]
test = pytest
